Funcionalidad de items menu de cada vendedor